syntax = "proto3";
package schema.v1;

import "google/protobuf/struct.proto";
import "v1/backend.proto";

message WebApp {
	repeated AppPage app_pages = 1;
	repeated Asset assets = 2;
	repeated Variable variables = 3;
	repeated AppPageCategory categories = 4;
	repeated Localization localizations = 5;

	message Variable {
		string id = 1;
		VariableType type = 2;
		string name = 3;
		string value = 4;
	}

	enum VariableType {
		JS = 0;
		CSS = 1;
	}
}

message Asset {
	string id = 1;
	string url = 2;
	string file_name = 3;
	int32 file_size = 4;
	string content_type = 5;
}

message AppPage {
	string id = 1;
	string page_name = 2;
	string slug = 3;
	PageType page_type = 4;
	repeated PageNode nodes = 5;
	string category_id = 6;

	enum PageType {
		SCREEN = 0;
		MOLECULE = 1;
	}
}

message AppPageCategory {
	string id = 1;
	string name = 2;
}

message PageNode {
	string id = 1;
	string display_name = 2;
	string name = 3;
	string parent = 4;
	repeated string nodes = 5;
	map<string, string> linked_nodes = 6;
	string component_name = 7;
	NodeCustom custom = 8;

	oneof props {
		WebNodeProps web_props = 9;
		MobileNodeProps mobile_props = 10;
	}
}

message WebNodeProps {
	string element_key = 1;
	optional string button_type = 2;
	optional string span = 3;
	optional string offset = 4;
	optional string push_prop = 5;
	optional string pull_prop = 6;
	optional string order = 7;
	repeated int32 gutter = 8;
	optional string wrap = 9;
	optional string justify = 10;
	optional string align = 11;
	optional int32 pin_count = 12;
	optional bool auto_focus = 13;
	optional string otp_input_type = 14;
	optional string icon_name = 15;
	optional string icon_position = 16;
	optional string color = 17;
	optional string active_color = 18;
	optional string inactive_color = 19;
	optional string check_color = 20;
	optional string direction = 21;
	optional string size = 22;
	optional string label = 23;
	optional string date_mode = 24;
	optional string date_format = 25;
	optional string week_format = 26;
	optional string month_format = 27;
	optional string time_format = 28;
	optional string mode = 29;
	optional int32 space_between = 30;
	optional bool is_required_authentication = 31;
	optional string redirect_url = 32;
	optional string flex = 33;
	optional string source_type = 34;
	optional bool is_password_field = 35;
	optional string align_items = 36;
	optional string justify_content = 37;
	optional int32 xs = 38;
	optional int32 sm = 39;
	optional int32 md = 40;
	optional int32 lg = 41;
	optional int32 xl = 42;
	optional int32 xxl = 43;

	// { gutter: number, xs: number, md: number, xl: number }
	optional google.protobuf.Struct grid = 44;

	// { slidesToShow: number }
	optional google.protobuf.Struct xl_responsive = 45;
	optional google.protobuf.Struct md_responsive = 46;
	optional google.protobuf.Struct xs_responsive = 47;

	optional string picker = 48;
	optional bool show_time = 49;
	optional string format = 50;
	optional bool disabled_overflow = 51;
	optional bool multiple = 52;
	optional int32 max_count = 53;
	optional string placement = 54;
	optional int32 width = 55;
	optional bool closable = 56;
	optional bool header_visible = 57;
	optional string type = 58;
	optional string text_type = 59;
	optional int32 slides_to_show = 60;
	optional bool variable_width = 61;
	optional bool infinity = 62;
	optional bool infinite = 63;
	optional bool centered = 64;
	optional string tab_position = 65;
	optional google.protobuf.Struct tabs = 66;
	optional google.protobuf.Struct tab_label_style = 67;
	optional string default_active_key = 68;
	optional bool is_header_visible = 69;
	optional bool is_footer_visible = 70;
	optional bool is_data_sortable = 71;
	optional bool is_pagination_enabled = 72;
	optional string pagination_position = 73;
	optional int32 page_size = 74;

	optional google.protobuf.Struct body_style = 75;
	optional google.protobuf.Struct placeholder_style = 76;
	optional google.protobuf.Struct container_style = 77;
	optional google.protobuf.Struct dropdown_style = 78;
	optional google.protobuf.Struct option_style = 79;
	optional google.protobuf.Struct cell_style = 80;
	optional google.protobuf.Struct cell_text_style = 81;
	optional google.protobuf.Struct style = 82;
	optional google.protobuf.Struct button_style = 83;
	optional google.protobuf.Struct header_style = 84;
	optional google.protobuf.Struct wrapper_style = 85;
	optional google.protobuf.Struct table_style = 86;
	optional google.protobuf.Struct header_row_style = 87;
	optional google.protobuf.Struct header_column_style = 88;
	optional google.protobuf.Struct body_row_style = 89;
	optional google.protobuf.Struct body_column_style = 90;
	optional google.protobuf.Struct sort_column_style = 91;
	optional google.protobuf.Struct footer_row_style = 92;
	optional google.protobuf.Struct footer_column_style = 93;
	optional google.protobuf.Struct pagination_wrapper_style = 94;
	optional google.protobuf.Struct label_style = 95;
	optional google.protobuf.Struct input_style = 96;

	optional WebNodeProps ascending_icon_props = 97;
	optional WebNodeProps descending_icon_props = 98;
	optional WebNodeProps icon_props = 99;
	optional WebNodeProps drawer_props = 100;
	optional WebNodeProps button_props = 101;
	optional WebNodeProps prefix_icon_props = 102;
	optional WebNodeProps suffix_icon_props = 103;

	optional RenderMolecule render_item = 109;
	optional MoleculeComponent header = 110;
	optional MoleculeComponent footer = 111;

	repeated NodeVariable drawer_title = 112;
	repeated NodeVariable placeholder = 113;
	repeated NodeVariable input_label = 114;
	repeated NodeVariable href = 115;
	repeated NodeVariable action = 116;
	repeated NodeVariable data = 117;
	repeated NodeVariable total_page = 118;
	repeated NodeVariable default_value = 119;
	repeated NodeVariable source = 120;
	repeated NodeVariable title = 121;
	repeated NodeVariable children_data = 122;
	repeated NodeVariable responsive_visibility = 123;
	repeated NodeVariable data_source = 124;

	repeated TableColumn table_columns = 125;
	repeated TableColumn table_actions = 126;

	repeated NodeAction on_pagination_change = 127;
	repeated NodeAction on_data_sorting_change = 128;

	repeated NodeVariable value_data = 129;
	repeated NodeVariable on_change = 130;
	repeated NodeVariable on_click = 131;

	message TableColumn {
		RenderMolecule molecule = 1;
		bool sortable = 2;
		bool filterable = 3;
		int32 column_index = 4;
		repeated NodeVariable column_name = 5;
		repeated NodeVariable column_path = 6;
	}
}

message MobileNodeProps {
	string element_key = 1;
	optional string background_color = 2;
	optional string safe_area = 3;
	optional string placeholder_text_color = 4;
	optional bool secure_text_entry = 5;
	optional bool auto_correct = 6;
	optional bool show_clear_text = 7;
	optional bool show_character_counter = 8;
	optional int32 max_length = 9;
	optional string clear_icon_color = 10;
	optional string secure_eye_icon_color = 11;
	optional bool editable = 12;
	optional int32 number_of_lines = 13;
	optional bool vertical = 14;
	optional bool loop = 15;
	optional int32 timeout = 16;
	optional bool horizontal = 17;
	optional int32 num_columns = 18;
	optional string source_type = 19;
	optional bool use_default_back_button = 20;
	optional bool auto_focus = 21;
	optional int32 pin_count = 22;
	optional string position = 23;
	optional string return_key_type = 24;
	optional string resize_mode = 25;
	optional string keyboard_type = 26;
	optional string auto_capitalize = 27;
	optional string date_mode = 28;
	optional string mode = 29;
	optional bool infinity = 30;
	optional bool inverted = 31;
	optional string name = 32;
	optional int32 size = 33;
	optional string color = 34;
	optional string type = 35;
	optional string left_icon_name = 36;
	optional string left_icon_type = 37;
	optional int32 left_icon_size = 38;
	optional string left_icon_color = 39;
	optional string right_icon_name = 40;
	optional string right_icon_type = 41;
	optional int32 right_icon_size = 42;
	optional string right_icon_color = 43;
	optional string launcher_type = 44;
	optional string otp_input_type = 45;
	optional float border_bottom_width = 46;
	optional string border_bottom_color = 47;

	optional google.protobuf.Struct style = 48;
	optional google.protobuf.Struct content_container_style = 49;
	optional google.protobuf.Struct input_style = 50;
	optional google.protobuf.Struct label_style = 51;
	optional google.protobuf.Struct character_counter_style = 52;
	optional google.protobuf.Struct cell_style = 53;
	optional google.protobuf.Struct cell_text_style = 54;
	optional google.protobuf.Struct title_style = 55;

	optional RenderMolecule render_item = 56;
	optional RenderMolecule preview = 57;
	optional RenderMolecule component = 58;

	optional MoleculeComponent list_empty_component = 59;
	optional MoleculeComponent list_header_component = 60;
	optional MoleculeComponent list_footer_component = 61;
	optional MoleculeComponent item_separator_component = 62;

	optional NodeReference key_extractor = 63;

	repeated NodeVariable placeholder = 64;
	repeated NodeVariable data = 65;
	repeated NodeVariable source = 66;
	repeated NodeVariable title = 67;
	repeated NodeVariable children_data = 68;
}

message RenderMolecule {
	optional NodeReference reference = 1;
	repeated FunctionArgument arguments = 2;
	repeated NodeParam props = 3;
}

message NodeReference {
	string name = 1;
	string ref_id = 2;
	google.protobuf.Struct ref_data = 3;
	string value = 4;
	ReferenceRefType ref_type = 5;

	enum ReferenceRefType {
		NONE = 0;
		API_REQUEST = 1;
		API_REQUEST_PARAM = 2;
		API_BUSINESS_PROCESS = 3;
		API_RESPONSE_DATA = 4;
		COLUMN_DEFINITION = 5;
		MOBILE_APP_ASSET = 6;
		MOBILE_APP_PAGE = 7;
		MOBILE_APP_PAGE_ACTION = 8;
		MOBILE_APP_PAGE_NODE = 9;
		MOBILE_APP_PAGE_PARAM = 10;
		MOBILE_APP_PAGE_FORM = 11;
		MOBILE_NAVIGATION = 12;
		MOBILE_NAVIGATION_NODE = 13;
		MOBILE_MOLECULE_PROP = 14;
		TABLE_DEFINITION = 15;
		PROJECT_VARIABLE = 16;
		LOCALIZATION = 17;
	}
}

message FunctionArgument {
	string name = 1;
	string argument_type = 2;
	bool plural = 3;
	NodeReference reference = 4;
}

message NodeParam {
	string name = 1;
	string param_type = 2;
	repeated string param_type_enum = 3;
	string default_value = 4;
	bool plural = 5;
	bool automated = 6;
	NodeReference reference = 7;
	NodeVariable value = 8;
	repeated NodeAction actions = 9;
	repeated FunctionArgument function_arguments = 10;
}

message NodeVariable {
	string local_id = 1;
	string name = 2;
	string value = 3;
	string value_path = 4;
	string default_value = 5;
	string value_type = 6;
	VariableDefaultType default_type = 7;
	VariableSource source = 8;
	VariableType variable_type = 9;
	repeated NodeReference values = 10;

	enum VariableDefaultType {
		STRING = 0;
		VARIABLE = 1;
	}

	enum VariableSource {
		PARAMS = 0;
		FORM_VALUES = 1;
		ACTION_RESPONSE = 2;
		STORAGE = 3;
		AUTHENTICATED_USER = 4;
		MOLECULE_PROPS = 5;
		PROJECT_ASSET = 6;
		CONTEXT_VALUES = 7;
		LOCAL_CONTEXT_RESPONSE = 8;
		FORM_VALIDATION_ERROR_MESSAGE = 9;
		CSS_VARIABLE = 10;
		LOCALIZATION = 11;
	}

	enum VariableType {
		STATIC = 0;
		DYNAMIC = 1;
	}
}

message NodeAction {
	string action = 1;
	string value = 2;
	ActionType action_type = 3;
	ActionSource source = 4;
	repeated NodePayload payload = 5;
	repeated NodePayload response = 6;
	repeated NodeReference values = 7;
	repeated NodeAction success_actions = 8;
	repeated NodeAction error_actions = 9;

	enum ActionType {
		API = 0;
		GENERAL = 1;
	}

	enum ActionSource {
		AUTHENTICATION = 0;
		BACKEND_CALL = 1;
		FORM_SUBMIT = 2;
		NAVIGATION = 3;
		SHOW_TOAST_MESSAGE = 4;
		MOLECULE_PROPS = 5;
		MODAL = 6;
		EVENT_LOG = 7;
		REQUEST_NOTIFICATION_PERMISSION = 8;
		DRAWER = 9;
	}
}

message NodePayload {
	NodeVariable value = 1;
	NodeReference reference = 2;
	repeated NodeAction actions = 3;
}

message MoleculeComponent {
	NodeReference reference = 1;
	repeated NodeParam props = 2;
}

message NodeCustom {
	optional bool use_prop_style = 1;
	optional bool ignore_prop_style = 2;
	optional NodeReference form = 3;
	optional NodeReference molecule = 4;
	repeated NodeMediaQuery media_queries = 5;
	optional NodeReference authentication = 6;
	optional RenderCondition render_condition = 7;
	repeated NodeVariable seo_title = 8;
	repeated NodeVariable seo_description = 9;
	repeated NodeAction actions = 10;
	repeated NodeParam params = 11;
	repeated NodeParam props = 12;
	repeated NodeVariable children_data = 13;
	repeated FormValidation form_validations = 14;
	repeated FormDefaultValue form_default_values = 15;
}

message FormDefaultValue {
	NodeReference reference = 1;
	NodeVariable value = 2;
}

message NodeMediaQuery {
	int32 lower = 1;
	int32 upper = 2;
	google.protobuf.Struct style = 3;
}

message RenderCondition {
	bool enabled = 1;
	repeated Condition conditions = 2;

	message Condition {
		Source source = 1;
		Operator operator = 2;
		NodeVariable left = 3;
		NodeVariable right = 4;
	}

	enum Source {
		BINARY = 0;
		GLOBAL = 1;
	}

	enum Operator {
		LESS_THAN = 0;
		LESS_EQUAL_THAN = 1;
		EQUAL = 2;
		NOT_EQUAL = 3;
		GREATER_THAN = 4;
		GREATER_EQUAL_THAN = 5;
		EXIST = 6;
		NOT_EXIST = 7;
	}
}

message FormValidation {
	ValidationType validation_type = 1;
	repeated FormValidationsRule validation_rules = 2;

	message FormValidationsRule {
		string value = 1;
		string value_type = 2;
		repeated NodeVariable error_messages = 3;
		RuleType rule_type = 4;
	}

	enum ValidationType {
		TEXT = 0;
		NUMBER = 1;
		EMAIL = 2;
		PASSWORD = 3;
		PHONE_NUMBER = 4;
	}

	enum RuleType {
		REQUIRED = 0;
		MAXIMUM = 1;
		MINIMUM = 2;
		REGEX = 3;
	}
}
